# learnCPP

./: README.md
HelloC++/dynamic_memory/: CMakeLists.txt  main.cpp
HelloC++/try_h/: main.cpp
HelloC++/try_polymorphism/: CMakeLists.txt  main.cpp
code_ABC/HelloC++/: CMakeLists.txt  main.cpp
code_ABC/HelloC++/include/: makeDrinking.h
code_ABC/HelloC++/src/: CMakeLists.txt  makeDrinking.cpp
code_ABC/simple_code/: main  main.cpp
